# BA__U-i-mlb-Sm-f-d-s-V-a-S

BA__Programmierung/: .gitignore  Dockerfile  README.md  pyproject.toml
BA__Programmierung/BA__Programmierung/: main.py
BA__Programmierung/scripts/: data_raw__extract_archives.sh
BA__Projekt/: .gitignore  Dockerfile  Makefile  README.md  my_database.duckdb  pyproject.toml
BA__Projekt/BA__Programmierung/: config.py  main.py
BA__Projekt/BA__Programmierung/conv/: conversion__arff_to_csv.py  conversion__txt_to_csv.py  conversion__xlsx_to_csv.py
BA__Projekt/BA__Programmierung/db/: load_iris.py  persist.py
BA__Projekt/BA__Programmierung/ml/: bnn_regression__hmc_nmavani-func-1.py  bnn_regression__svi_nmavani-func-1.py  ednn_regression__boston_housing.py  ednn_regression__combined_cycle_power_plant.py  ednn_regression__concrete_compressive_strength.py  ednn_regression__condition_based_maintenance_of_naval_propulsion_plants.py  ednn_regression__energy_efficiency.py  ednn_regression__iris.py  ednn_regression__kin8nm.py  ednn_regression__nmavani_func1.py  ednn_regression__wine_quality_red.py  ednn_regression__wine_quality_white.py
BA__Projekt/BA__Programmierung/ml/datasets/: dataset__torch__base_image_classification.py  dataset__torch__base_tabular.py  dataset__torch__boston_housing.py  dataset__torch__cifar_10_python.py  dataset__torch__combined_cycle_power_plant.py  dataset__torch__concrete_compressive_strength.py  dataset__torch__condition_based_maintenance_of_naval_propulsion_plants.py  dataset__torch__duckdb_iris.py  dataset__torch__energy_efficiency.py  dataset__torch__fmnist.py  dataset__torch__kin8nm.py  dataset__torch__kmnist.py  dataset__torch__mnist.py  dataset__torch__nmavani_func1.py  dataset__torch__wine_quality_red.py  dataset__torch__wine_quality_white.py
BA__Projekt/BA__Programmierung/util/: singleton.py
BA__Projekt/BA__Programmierung/viz/: viz__ednn_regression__boston_housing.py  viz__ednn_regression__combined_cycle_power_plant.py  viz__ednn_regression__concrete_compressive_strength.py  viz__ednn_regression__condition_based_maintenance_of_naval_propulsion_plants.py  viz__ednn_regression__energy_efficiency.py  viz__ednn_regression__iris.py  viz__ednn_regression__kin8nm.py  viz__ednn_regression__nmavani_func1.py  viz__ednn_regression__wine_quality_red.py  viz__ednn_regression__wine_quality_white.py
BA__Projekt/models/: model__generic.py  model__generic_ensemble.py
BA__Projekt/scripts/: check__all.sh  check__doc.sh  check__init.sh  check__relative_path_py.sh  check__spacing.sh  clean--dbs.sh  clean--tests.sh  clean____pycache__.sh  clean__all.sh  clean__data-processed.sh  clean__data_processed.sh  clean__dbs.sh  clean__doc.sh  clean__dotfiles.sh  clean__egg-info.sh  clean__egg_info.sh  clean__logs.sh  clean__ruffcache.sh  clean__viz.sh  clean__zone-identifier.sh  clean__zone_identifier.sh  create__doc.sh  create__files_by_token.sh  create__files_dataset_traing_viz_by_token.sh  create__files_dataset_training_viz_by_token.sh  create__test_folders.sh  data-source__convert.sh  data-source__rename-csv.sh  data_raw__delete_folders.sh  data_raw__extract_archives.sh  data_raw__rename.sh  data_source__all.sh  data_source__extract-archives.sh  data_source__extract_archives.sh  data_source__flatten.sh  data_source__move.sh  data_source__rename.sh  print__folder_contents_by_depth.sh  print__folder_contents_by_depth_w_files.sh  service__restart_all.sh  (+2 more)
BA__Projekt/tests/: test__ednn_classification__cifar_10_python.py  test__ednn_classification__fmnist.py  test__ednn_classification__kmnist.py  test__ednn_classification__mnist.py  test__ednn_regression__boston_housing.py  test__ednn_regression__cifar_10_python.py  test__ednn_regression__combined_cycle_power_plant.py  test__ednn_regression__concrete_compressive_strength.py  test__ednn_regression__condition_based_maintenance_of_naval_propulsion_plants.py  test__ednn_regression__energy_efficiency.py  test__ednn_regression__fmnist.py  test__ednn_regression__iris.py  test__ednn_regression__kin8nm.py  test__ednn_regression__kmnist.py  test__ednn_regression__mnist.py  test__ednn_regression__nmavani_func1.py  test__ednn_regression__wine-quality-white.py  test__ednn_regression__wine_quality_red.py  test__ednn_regression__wine_quality_white.py
BA__Projekt/tests/models/: test__model__generic.py  test__model__generic__ensemble.py
(+124 files in other folders)
