[project]
name = "BA__Projekt"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Marten Windler", email = "bachelor-arbeit-lize.annoying157@passmail.net" }]
license = { text = "The Unlicense" }
requires-python = ">=3.8"
dependencies = [
    "duckdb",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "openpyxl",
    "pandas",
    "torch",
    "scikit-learn",
    "scipy",
    "sphinx",
    "tensorflow",
    "torchvision",
    "xlrd"
]

[project.scripts]
ba-programmierung = "BA__Programmierung.main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["BA__Programmierung", "models"]
exclude = [
  ".venv*",
  "build*",
  "logs*",
  "notebooks*",
  "scripts*"
]

[tool.pytest.ini_options]
env = [
    "PROJECT_BASE_PATH=/root/BA__U-i-mlb-Sm-f-d-s-V-a-S/BA__Projekt/"
]