[project]
name = "BA__Projekt"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Marten Windler", email = "bachelor-arbeit-lize.annoying157@passmail.net" }]
license = { text = "The Unlicense" }
requires-python = ">=3.8"
dependencies = [
    "duckdb",
    "edl_pytorch",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "openpyxl",
    "pandas",
    "properscoring",
    "pryo-ppl",
    "pytest",
    "ruff",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sphinx",
    "tensorflow",
    "torch",
    "torchmetrics",
    "torchvision",
    "xlrd"
]

[project.scripts]
ba-programmierung = "BA__Programmierung.main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["BA__Programmierung", "models"]
exclude = [
  ".venv*",
  "build*",
  "logs*",
  "notebooks*",
  "scripts*"
]

[tool.pytest.ini_options]
env = [
    "PROJECT_BASE_PATH=/root/BA__U-i-mlb-Sm-f-d-s-V-a-S/BA__Projekt/"
]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = [
  "F", 
  "E", 
  "W", 
  "I", 
  "N", 
  "UP", 
  "C90"
]
lint.ignore = [
  "C901",
  "E501", 
  "F841", 
  "D100", 
  "D101", 
  "D102", 
  "D103", 
  "D104", 
  "D105", 
  "D106", 
  "D107",
  "I001",
  "N806",
  "N999",
  "UP007",
  "UP035",
  "UP038",
  "W293"
]
